adding logic to call the API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,7 @@
     class="flex text-2xl text-charcoal tracking-wide justify-end font-bold"
     routerLink="/inicio"
   >
-    <!-- <img src="assets/icons/nutripia-logo.png" class="w-full h-full" /> -->
-    Nutri<span class="text-primary-purple">Pia</span>
+    <nt-logo />
   </a>
   <ul
     [class.hidden]="!isMenuOpen"
