--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,12 +16,9 @@
         type="text"
         placeholder="Ejem: pia@nutricionista.com"
         formControlName="email"
-        [class.border-red]="
-          this.reactiveForm.get('email')!.invalid &&
-          this.reactiveForm.get('email')!.touched
-        "
+        [class.border-red]="isEmailInvalid()"
       />
-      @if (isEmailValid()) {
+      @if (isEmailInvalid()) {
         <span class="text-red">Formato de email no valido</span>
       }
     </div>
@@ -30,25 +27,27 @@
       <input
         class="px-4 py-2 border border-lavender-purple rounded-lg"
         for="email"
-        type="text"
+        type="password"
         placeholder="Escribe tu contraseña aca"
         formControlName="password"
-        [class.border-red]="
-          this.reactiveForm.get('password')!.invalid &&
-          this.reactiveForm.get('password')!.touched
-        "
+        [class.border-red]="isPasswordInvalid()"
       />
-      @if (isForbidden() && isFormEdited()) {
-        <span class="text-red">Contraseña incorrecta</span>
+      @if (isForbidden()) {
+        <span class="text-red">Credenciales incorrecta</span>
+      }
+      @if (isPasswordInvalid()) {
+        <span class="text-red">La contraseña no puede estar vacia</span>
       }
     </div>
     <a href="/">¿Olvidaste tu contraseña?</a>
+    <!-- the width and height is fixed to to avoid having layout shift while calling the backend -->
     <nt-button
       [isPrimary]="true"
       label="Iniciar Sesion"
-      class="w-fit mx-auto mt-4"
+      class="w-[193px] h-[55px] mx-auto mt-3 |"
       type="submit"
-      [disable]="!isFormEdited()"
+      [isLoading]="apiConnectionState().isLoading"
+      [isDisable]="!isFormEdited() || !isFormValid()"
     />
   </form>
 </section>
