finishing login page template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   </a>
   <ul
     [class.hidden]="!isMenuOpen"
-    class="absolute w-72 bg-white font-serif text-lighter-charcoal text-xl font-normal flex flex-col space-y-12 py-12 right-[5vw] top-full border border-solid border-green rounded-xl items-center | lg:flex lg:flex-row lg:px-0 lg:space-y-0 lg:py-0 lg:static lg:border-none lg:text-base lg:justify-between lg:w-9/12 lg:items-center"
+    class="absolute w-72 bg-white font-serif text-lighter-charcoal text-xl font-normal flex flex-col space-y-12 py-12 right-[5vw] top-full border border-solid border-lavender-purple rounded-xl items-center | lg:flex lg:flex-row lg:px-0 lg:space-y-0 lg:py-0 lg:static lg:border-none lg:text-base lg:justify-between lg:w-9/12 lg:items-center"
   >
     <li>
       <ul
