--- a/src/app/shared/logo/logo.component.html
+++ b/src/app/shared/logo/logo.component.html
@@ -1,4 +1,4 @@
-<span class="text-charcoal tracking-wide font-bold flex">
+<span [ngClass]="customClasses">
   Nutri
   <span class="text-primary-purple">Pia</span>
 </span>
