--- a/src/app/shared/price-box/price-box.component.html
+++ b/src/app/shared/price-box/price-box.component.html
@@ -84,7 +84,7 @@
   <nt-button
     [isPrimary]="pricingPlanId() !== 1 ? true : false"
     [rounded]="false"
-    optClasses="w-48"
+    class="w-48"
     label="Empieza ya"
     href="/"
   />
