--- a/src/app/pages/home/sections/cta/cta.component.html
+++ b/src/app/pages/home/sections/cta/cta.component.html
@@ -1,20 +1,21 @@
 <section class="flex flex-col bg-primary-purple text-white py-14 items-center">
   <div class="flex space-x-4 mb-10 | md:hidden">
-    <img class="w-7" src="assets/icons/chicken-icon.svg" alt="food icon" />
-    <img class="w-7" src="assets/icons/banana-cta-icon.svg" alt="food icon" />
-    <img class="w-7" src="assets/icons/brocoli-icon.svg" alt="food icon" />
-    <img class="w-7" src="assets/icons/fish-icon.svg" alt="food icon" />
-    <img class="w-7" src="assets/icons/apple-cta-icon.svg" alt="food icon" />
+    <nt-decorative-icon type="chicken" color="#9C90B4" />
+    <nt-decorative-icon type="banana" color="#9C90B4" />
+    <nt-decorative-icon type="brocoli" color="#9C90B4" />
+    <nt-decorative-icon type="fish" color="#9C90B4" />
+    <nt-decorative-icon type="apple" color="#9C90B4" />
   </div>
   <h2 class="text-4xl text-center max-w-[12ch] font-black mb-6 | md:max-w-none">
     ¡Transforma tu salud hoy!
   </h2>
   <nt-button [isPrimary]="false" label="Contactame" href="/" />
+
   <div class="flex space-x-4 mt-10 | md:hidden">
-    <img class="w-7" src="assets/icons/chicken-icon.svg" alt="food icon" />
-    <img class="w-7" src="assets/icons/banana-cta-icon.svg" alt="food icon" />
-    <img class="w-7" src="assets/icons/brocoli-icon.svg" alt="food icon" />
-    <img class="w-7" src="assets/icons/fish-icon.svg" alt="food icon" />
-    <img class="w-7" src="assets/icons/apple-cta-icon.svg" alt="food icon" />
+    <nt-decorative-icon type="fish" color="#9C90B4" />
+    <nt-decorative-icon type="chicken" color="#9C90B4" />
+    <nt-decorative-icon type="banana" color="#9C90B4" />
+    <nt-decorative-icon type="apple" color="#9C90B4" />
+    <nt-decorative-icon type="brocoli" color="#9C90B4" />
   </div>
 </section>
