custom input component logic finish, now its possible to reutilize the input template code

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -61,7 +61,7 @@
       class="w-[193px] h-[55px] mx-auto mt-3 |"
       type="submit"
       [isLoading]="apiConnectionState().isLoading"
-      [isDisable]="!isFormValid() || !isFormEdited()"
+      [isDisabled]="!isFormValid() || !isFormEdited()"
     />
   </form>
 </section>
