--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,88 @@
-<p>register works!</p>
+<section
+  class="flex flex-col text-primary-purple px-mobile-padding items-center h-dvh py-8 | lg:px-0 lg:h-auto lg:items-start lg:flex-row lg:py-0"
+>
+  <div class="hidden | lg:flex flex-col space-y-8 items-center w-[75%] mt-52">
+    <nt-logo class="lg:text-6xl" />
+    <div class="flex space-x-8">
+      <nt-decorative-icon type="fish" color="#D6D6D6" />
+      <nt-decorative-icon type="chicken" color="#D6D6D6" />
+      <nt-decorative-icon type="banana" color="#D6D6D6" />
+      <nt-decorative-icon type="apple" color="#D6D6D6" />
+      <nt-decorative-icon type="brocoli" color="#D6D6D6" />
+      <nt-decorative-icon type="banana" color="#D6D6D6" />
+      <nt-decorative-icon type="fish" color="#D6D6D6" />
+    </div>
+  </div>
+  <form
+    class="flex flex-col w-full max-w-80 | lg:w-[25%] lg:max-w-none lg:px-4 lg:items-center lg:py-10 lg:h-full lg:border-l lg:border-l-lavender-gray"
+    [formGroup]="reactiveForm"
+    (ngSubmit)="onSubmit()"
+  >
+    <nt-custom-input
+      label="Nombre y Apellido"
+      type="text"
+      [control]="getFormControlName('fullName')"
+      controlName="fullName"
+      [isInputValid]="!isInputInvalid('fullName')"
+      class="w-full max-w-72 mt-3"
+    />
+    <nt-custom-input
+      label="Correo Electronico"
+      type="text"
+      [control]="getFormControlName('email')"
+      controlName="email"
+      [isInputValid]="!isInputInvalid('email')"
+      class="w-full max-w-72 mt-3"
+    />
+    <nt-custom-input
+      label="Contraseña"
+      type="text"
+      [control]="getFormControlName('password')"
+      controlName="password"
+      [isInputValid]="!isInputInvalid('password')"
+      class="w-full max-w-72 mt-3"
+    />
+    <nt-custom-input
+      label="Confirme Contraseña"
+      type="text"
+      [control]="getFormControlName('confirmedPassword')"
+      controlName="confirmedPassword"
+      [isInputValid]="!isInputInvalid('confirmedPassword')"
+      class="w-full max-w-72 mt-3"
+    />
+    <nt-custom-input
+      label="Edad"
+      type="digit"
+      [control]="getFormControlName('age')"
+      controlName="age"
+      [isInputValid]="!isInputInvalid('age')"
+      class="w-full max-w-72 mt-3"
+    />
+    <nt-custom-input
+      label="Telefono"
+      type="text"
+      [control]="getFormControlName('phoneNumber')"
+      controlName="phoneNumber"
+      [isInputValid]="!isInputInvalid('phoneNumber')"
+      class="w-full max-w-72 mt-3"
+    />
+    <nt-custom-input
+      label="Diagnosticos Previos"
+      type="text"
+      [control]="getFormControlName('previousDiagnostics')"
+      controlName="previousDiagnostics"
+      [isInputValid]="!isInputInvalid('previousDiagnostics')"
+      class="w-full max-w-72 mt-3"
+    />
+    <!-- the width and height is fixed to to avoid having layout shift while calling the backend -->
+    <nt-button
+      [isPrimary]="true"
+      label="Registrarse"
+      class="w-[193px] h-[55px] mx-auto mt-3 lg:m-0"
+      type="submit"
+      [isLoading]="apiConnectionState().isLoading"
+      [isDisabled]="reactiveForm.invalid || !reactiveForm.touched"
+      class="mt-3"
+    />
+  </form>
+</section>
