--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -56,7 +56,7 @@
     />
     <nt-custom-input
       label="Edad"
-      type="digit"
+      type="number"
       [control]="getFormControlName('age')"
       controlName="age"
       [isInputValid]="!isInputInvalid('age')"
@@ -66,7 +66,7 @@
     <nt-custom-input
       label="Telefono"
       type="text"
-      [control]="getFormControlName('phoneNumber')"
+      [control]="getFormControlName('phoneNumber')!"
       controlName="phoneNumber"
       [isInputValid]="!isInputInvalid('phoneNumber')"
       validationErrorOutput="Formato de numero telefonico chileno invalido"
