updating login to use custom input component, finish login onSubmit interaction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,7 +84,7 @@
               <nt-button
                 [isPrimary]="true"
                 label="Subscribirse"
-                href="/registro"
+                href="/subscripcion"
               />
             </li>
           }
