--- a/src/app/shared/custom-input/custom-input.component.html
+++ b/src/app/shared/custom-input/custom-input.component.html
@@ -3,7 +3,7 @@
     label()
   }}</label>
   @if (type() === "number") {
-    <div class="flex w-full space-x-4">
+    <div class="flex w-full space-x-4 justify-center">
       <nt-button
         [isPrimary]="true"
         class="h-[42px] w-16 lg:p-0 items-center text-2xl | lg:text-3xl"
