--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -89,7 +89,7 @@
       label="Registrarse"
       class="w-[193px] h-[55px] mx-auto mt-3 lg:m-0"
       type="submit"
-      [isLoading]="apiConnectionState().isLoading"
+      [isLoading]="false"
       [isDisabled]="reactiveForm.invalid || !reactiveForm.touched"
       class="mt-3"
     />
