--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
       <ul
         class="flex space-y-8 flex-col items-center | lg:py-0 lg:pt-0 lg:px-10 lg:space-y-0 lg:space-x-10 lg:text-nowrap lg:items-center lg:flex lg:flex-row"
       >
-        @switch (currentRole) {
+        @switch ("") {
           @case (ADMIN_ROLE) {
             <li>
               <a class="lg:hover:text-charcoal" routerLink="/logout"
